<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res/com.ikm.myagenda"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/splash_new"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="97dp" >

        <ImageView
            android:id="@+id/expandable_lv_social_background_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/cd_main_image"
            android:scaleType="centerCrop"
            android:src="@drawable/atas_menu_with_logo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:padding="3dp" >

            <ImageView
                android:id="@+id/expandable_lv_social_image"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="16dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginLeft="4dp"
                android:gravity="center_vertical"
                android:orientation="vertical" >

                <com.ikm.myagenda.font.RobotoTextView
                    android:id="@+id/expandable_lv_social_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="6dp"
                    android:text="Johnatan Douhou"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    app:typeface="robotoBold" />

                <com.ikm.myagenda.font.RobotoTextView
                    android:id="@+id/expandable_lv_social_place"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="from Oklahoma, USA"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    app:typeface="robotoBold" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
    
    <View
        android:id="@+id/divider_top"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/imageView1"
        android:background="@color/material_light_yellow_600" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:gravity="center_horizontal" >

        <RadioGroup
            android:id="@+id/radioTypeAgenda"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/radioAgenda"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:shadowColor="@color/white"
                android:text="@string/type_agenda"
                android:textColor="@color/white"
                app:typeface="robotoBold" />

            <RadioButton
                android:id="@+id/radioPengumumanLain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:shadowColor="@color/white"
                android:text="@string/type_pengumuman"
                android:textColor="@color/white"
                app:typeface="robotoBold" />
        </RadioGroup>
    </LinearLayout>
    
    <View
        android:id="@+id/divider_bottom"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/imageView1"
        android:background="@color/material_deep_purple_400" />

    <com.ikm.myagenda.view.AnimatedExpandableListView
        android:id="@+id/expandable_lv_social_list_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
    </com.ikm.myagenda.view.AnimatedExpandableListView>

</LinearLayout>